# windows-rs

./: Cargo.toml
.github/workflows/: build.yml
crates/bindings/src/: main.rs
crates/libs/bindgen/src/: lib.rs  type_map.rs
crates/libs/bindgen/src/rust/: delegates.rs  mod.rs  writer.rs
crates/libs/bindgen/src/types/: mod.rs
crates/libs/core/src/: hresult.rs  unknown.rs
crates/libs/metadata/src/: type_name.rs
crates/libs/registry/src/: bindings.rs
crates/libs/sys/: Cargo.toml
crates/libs/windows/: Cargo.toml
crates/macros/src/: lib.rs
crates/reader/src/: method_signature.rs
crates/samples/windows/dxc/: Cargo.toml  bindings.txt
crates/samples/windows/dxc/src/: bindings.rs  main.rs
crates/tests/literals/tests/: sys.rs
crates/tools/bindings/src/: sys.txt  windows.txt
crates/tools/querysig/: Cargo.toml
crates/tools/querysig/src/: main.rs
crates/tools/yml/src/: main.rs
examples/clock/bindings/: build.rs
examples/com_uri/bindings/: build.rs
examples/com_uri/src/: main.rs
examples/dxc/: build.rs
examples/dxc/bindings/: build.rs
examples/dxc/src/: main.rs
examples/enum_windows/src/: main.rs
examples/spellchecker/bindings/: build.rs
examples/spellchecker/src/: main.rs
examples/webview2/bindings/: build.rs
src/: bindings.rs  lib.rs
src/result/: error.rs  error_code.rs
src/runtime/: ref_count.rs  waiter.rs
src/types/: bstr.rs  mod.rs  pstr.rs  pwstr.rs
tests/bstr/: build.rs
tests/bstr/tests/: bstr.rs
tests/handles/: build.rs
tests/handles/tests/: null.rs
tests/win32/: build.rs
tests/win32/tests/: win32.rs
(+233 files in other folders)
