[package]
name = "sample_dxc"
version = "0.0.0"
edition = "2018"

[dependencies]
anyhow = "1"
libloading = "0.8"

[dependencies.windows]
path = "../../../libs/windows"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D_Dxc",
    "Win32_System_Com",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
]
