[package]
name = "sample_dxc"
version = "0.0.0"
edition = "2018"

[dependencies]
anyhow = "1"
libloading = "0.8"

[dependencies.windows-core]
path = "../../../libs/core"

[dependencies.windows-targets]
path = "../../../libs/targets"

[build-dependencies.windows-bindgen]
path = "../../../libs/bindgen"
